add the ability to change the splitter orientation in the query editor

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -83,6 +83,7 @@ common.yes.button=Yes
 # -------------------------------------------------------------
 action.about-command=About
 action.add-bookmark-command=Bookmark this Query
+action.change-split-orientation-command=Change Split Orientation
 action.check-update-command=Check for Update
 action.clear-editor-output-command=Clear Output Log
 action.clear-recent-files-command=Clear recent files list
@@ -1296,6 +1297,7 @@ QueryEditorPopupMenu.results.table.row.numbers=Show row number header
 QueryEditorPopupMenu.rollback=Rollback
 QueryEditorPopupMenu.use-single-resut-set-tab=Use single resut set tab
 QueryEditorResultsPanel.title=Output
+QueryEditorToolBar.change-split-orientation-command=Change Split Orientation
 QueryEditorToolBar.clear-editor-output-command=Clear the editor's output log panel
 QueryEditorToolBar.comment-lines-command=Comment/Uncomment
 QueryEditorToolBar.commit-command=Commit all changes since last commit/rollback
