--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -47,7 +47,7 @@ common.finish.button=Finish
 common.generate.button=Generate
 common.get-rows-count=Get rows count
 common.help.button=Help
-common.indexes=Indexes
+common.indexes=Indices
 common.key=Key
 common.message.apply-changes=Do you wish to apply your changes?
 common.message-enter-password=Your user name and password are not defined.\nPlease enter your user name and password.
@@ -595,7 +595,7 @@ BrowserConstants.ALL_TYPES_CLOSED=All Types Closed
 BrowserConstants.FUNCTION=FUNCTION
 BrowserConstants.FUNCTIONS_STRING=Functions
 BrowserConstants.INDEX=INDEX
-BrowserConstants.INDEXES_STRING=Indexes
+BrowserConstants.INDEXES_STRING=Indices
 BrowserConstants.PACKAGES_STRING=Packages
 BrowserConstants.PROCEDURE=PROCEDURE
 BrowserConstants.PROCEDURES_STRING=Procedures
@@ -669,14 +669,14 @@ BrowserTableEditingPanel.data-table=Table Data:
 BrowserTableEditingPanel.db-table=Database Table
 BrowserTableEditingPanel.description-table=Table: 
 BrowserTableEditingPanel.external-file=External file
-BrowserTableEditingPanel.indexes-table=Indexes for table: 
+BrowserTableEditingPanel.indexes-table=Indices for table: 
 BrowserTableEditingPanel.metadata-table=Table Meta Data: 
 BrowserTableEditingPanel.option-disabled=Automatic counting of records is disabled
 BrowserTableEditingPanel.privileges-table=Access rights for table: 
 BrowserTableEditingPanel.quering=Querying...
 BrowserTableEditingPanel.row-count=Data Row Count:
 BrowserTableEditingPanel.table-columns=Table Columns
-BrowserTableEditingPanel.table-indexes=Table Indexes
+BrowserTableEditingPanel.table-indexes=Table Indices
 BrowserTableEditingPanel.table-keys=Table Keys
 BrowserTableEditingPanel.table-name=Table Name:
 BrowserTreeFolderPopupMenu.ConnectAll=Connect All
@@ -972,7 +972,7 @@ CreateUDFPanel.ReturnsType=Returns Type
 DatabaseObjectMetaDataPanel.DatabaseObjectMetaData=Database Object Meta Data
 DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
-DatabaseTableNode.indexes=Indexes
+DatabaseTableNode.indexes=Indices
 DatabaseTableNode.primary-keys=Primary Keys
 DefaultConnectionListener.activeConns=Active Data Sources: {0}
 DependenciesPanel.dependedOn=Objects, that {0} depends on
@@ -1244,7 +1244,7 @@ NamedObject.EXCEPTION=Exceptions
 NamedObject.EXTERNAL_FUNCTION=UDFs
 NamedObject.FUNCTION=Functions
 NamedObject.GLOBAL_TEMPORARY=Global Temporary Tables
-NamedObject.INDEX=Indexes
+NamedObject.INDEX=Indices
 NamedObject.PACKAGE=Packages
 NamedObject.PROCEDURE=Procedures
 NamedObject.ROLE=Roles
@@ -1253,7 +1253,7 @@ NamedObject.SYNONYM=Synonyms
 NamedObject.SYSTEM_DATE_TIME_FUNCTIONS=System date time functions
 NamedObject.SYSTEM_DOMAIN=System domains
 NamedObject.SYSTEM_FUNCTIONS=System functions
-NamedObject.SYSTEM_INDEX=System indexes
+NamedObject.SYSTEM_INDEX=System indices
 NamedObject.SYSTEM_NUMERIC_FUNCTIONS=System numeric functions
 NamedObject.SYSTEM_PACKAGE=System packages
 NamedObject.SYSTEM_ROLE=System roles
