--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1443,7 +1443,7 @@ TraceManagerPanel.ShowTopPanel=Показать верхнюю панель
 TraceManagerPanel.Start=Старт
 TraceManagerPanel.Stop=Стоп
 TraceManagerPanel.Text=Текст:
-TraceManagerPanel.UseConfigFile=Использовать файл кофигурации
+TraceManagerPanel.UseConfigFile=Использовать файл конфигурации
 TraceManagerPanel.User=Пользователь
 TraceManagerPanel.Username=Имя пользователя
 TraceManagerPanel.VisibleColumns=Видимые столбцы
