improve tablespaces: 1.syntax corrected 2.added for constraints 3.tables and indexes added by drag & drop

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -17,6 +17,7 @@ common.confirmation=Подтверждение
 common.connect.button=Подключиться
 common.connecting=Подключаемся...
 common.connection=Подключение
+common.contents=Содержимое
 common.constraints=Ограничения
 common.copy-to-clipboard.button=Скопировать в буфер обмена
 common.copy.button=Копировать
@@ -122,7 +123,7 @@ action.cut-command=Вырезать
 action.database-disconnect-command.description=Закрыть текущее подключение к базе данных 
 action.database-disconnect-command=Закрыть подключение
 action.delete-row-command=Удалить выделенный столбец в таблице
-action.donate-command.description=Отправить финансовую поддержку для продолжения разработки RedXpert
+action.donate-command.description=Отправить финансовую поддержку для продолжения разработки RedExpert
 action.donate-command=Поддержать разработчика
 action.drivers-command=Драйверы
 action.drop-object-command=Удалить выделенный объект
@@ -180,7 +181,7 @@ action.import-connections-from-file-command=Импорт подключений 
 action.import-delimited-command=Импорт из файла с разделителями
 action.import-xml-command=Импорт из XML
 action.insert-row-command=Создать новый столбец в таблице после выделенного
-action.license-command.description=Лицензия к данному выпуску RedXpert
+action.license-command.description=Лицензия к данному выпуску RedExpert
 action.license-command=Лицензия
 action.log-in-account-command.description=Войти на reddatabase.ru
 action.log-in-account-command=Войти на reddatabase.ru
@@ -778,7 +779,7 @@ BrowserTriggerPanel.Trigger=Триггер
 BrowserTriggerPanel.TriggerName=Имя триггера: 
 BrowserUDFPanel.DatabaseUDF=Внешняя функция
 BrowserUDFPanel.UDFName=Имя функции
-BrowserViewPanel.JobName=RedXpert - Браузер баз данных
+BrowserViewPanel.JobName=RedExpert - Браузер баз данных
 CatalogPanel.AvailableSchemas=Доступные схемы
 CatalogPanel.DatabaseCatalog=Каталог базы данных
 CatalogPanel.SchemaName=Имя схемы
