--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -17,6 +17,7 @@ common.confirmation=Confirmation
 common.connect.button=Connect
 common.connecting=Connecting...
 common.connection=Connection
+common.contents=Contents
 common.constraints=Constraints
 common.copy-to-clipboard.button=Copy to Clipboard
 common.copy.button=Copy
@@ -122,7 +123,7 @@ action.cut-command=Cut
 action.database-disconnect-command.description=Close the database connection associated with the current selection
 action.database-disconnect-command=Close Connection
 action.delete-row-command=Drop the selected table column
-action.donate-command.description=Make a donation to support the continued development of RedXpert
+action.donate-command.description=Make a donation to support the continued development of RedExpert
 action.donate-command=Make a Donation
 action.drivers-command=Drivers
 action.drop-object-command=Drop the selected object
@@ -180,7 +181,7 @@ action.import-connections-from-file-command=Import Connections from file
 action.import-delimited-command=Import from Delimited File
 action.import-xml-command=Import from XML
 action.insert-row-command=Create a new table column after the current selection
-action.license-command.description=RedXpert release license
+action.license-command.description=Red Expert release license
 action.license-command=License
 action.log-in-account-command.description=Log in reddatabase.ru
 action.log-in-account-command=Log in reddatabase.ru
@@ -201,7 +202,7 @@ action.print-plan-command=Print Plan
 action.print-preview-command=Print Preview
 action.redo-command.description=Redo the last action
 action.redo-command=Redo
-action.release-notes-command.description=RedXpert version release notes
+action.release-notes-command.description=RedExpert version release notes
 action.release-notes-command=Release Notes
 action.replace-command=Replace...
 action.replace-next-command=Replace Next
@@ -779,7 +780,7 @@ BrowserTriggerPanel.Trigger=Trigger
 BrowserTriggerPanel.TriggerName=Trigger Name:
 BrowserUDFPanel.DatabaseUDF=Database UDF
 BrowserUDFPanel.UDFName=UDF Name
-BrowserViewPanel.JobName=RedXpert - Database Browser
+BrowserViewPanel.JobName=RedExpert - Database Browser
 CatalogPanel.AvailableSchemas=Available Schemas
 CatalogPanel.DatabaseCatalog=Database Catalog
 CatalogPanel.SchemaName=Schema Name
