Objects open immediately for editing

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -515,6 +515,7 @@ AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Active
 AbstractCreateObjectPanel.check=Check
 AbstractCreateObjectPanel.computed=Computed By
+AbstractCreateObjectPanel.createSQL=DDL to create
 AbstractCreateObjectPanel.default-value=Default Value
 AbstractCreateObjectPanel.description=Description
 AbstractCreateObjectPanel.table=Table
