--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -514,6 +514,7 @@ AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Активный
 AbstractCreateObjectPanel.check=Проверка
 AbstractCreateObjectPanel.computed=Вычисляемое как
+AbstractCreateObjectPanel.createSQL=DDL создания
 AbstractCreateObjectPanel.default-value=Значение по умолчанию
 AbstractCreateObjectPanel.description=Комментарий
 AbstractCreateObjectPanel.table=Таблица
