translate the execute button of stored procedures and functions and add a "create ddl" tab

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -42,6 +42,7 @@ common.encoding=Encoding
 common.error-message=Error message
 common.error.apply-changes=An error occurred applying the specified changes.\n\nThe system returned:\n
 common.error.connection=The connection to the database could not be established. \nPlease ensure all required fields have been entered correctly and try again.\n\nThe system returned:\n
+common.execute=Execute
 common.fetched=Count fetched
 common.file=File
 common.finish.button=Finish
