--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -42,6 +42,7 @@ common.encoding=Кодировка
 common.error-message=Сообщение об ошибке
 common.error.apply-changes=Ошибка применения измений.\n\n Система вернула:\n
 common.error.connection=Не удалось установить соединение с базой данных.\nУбедитесь, что все обязательные поля заполнены правильно и повторите попытку. \n\nСистема вернула: \n
+common.execute=Выполнить
 common.fetched=Число извлеченных
 common.file=Файл
 common.finish.button=Завершить
