add the tab for triggers on tables

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -78,6 +78,7 @@ common.subtype=Subtype
 common.table=Table
 common.test.button=Test
 common.title-enter-password=Enter password
+common.triggers=Triggers
 common.value=Value
 common.yes.button=Yes
 # -------------------------------------------------------------
@@ -680,6 +681,7 @@ BrowserTableEditingPanel.quering=Querying...
 BrowserTableEditingPanel.row-count=Data Row Count:
 BrowserTableEditingPanel.table-columns=Table Columns
 BrowserTableEditingPanel.table-indexes=Table Indices
+BrowserTableEditingPanel.table-triggers=Table Triggers
 BrowserTableEditingPanel.table-keys=Table Keys
 BrowserTableEditingPanel.table-name=Table Name:
 BrowserTreeFolderPopupMenu.ConnectAll=Connect All
@@ -1366,6 +1368,11 @@ TableColumnIndexTableModel.Expression=Expression
 TableColumnIndexTableModel.IndexName=Index Name
 TableColumnIndexTableModel.IndexedColumn=Indexed Column
 TableColumnIndexTableModel.Unique=Unique
+TableTriggersTableModel.TriggerName=Trigger Name
+TableTriggersTableModel.TriggerType=Trigger Type
+TableTriggersTableModel.Active=Active
+TableTriggersTableModel.Position=Position
+TableTriggersTableModel.Description=Description
 TableConstraintsPanel.DeleteRule=Delete rule
 TableConstraintsPanel.Name=Name
 TableConstraintsPanel.ReferenceColumn=Reference Column
