--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -78,6 +78,7 @@ common.subtype=Подтип
 common.table=Таблица
 common.test.button=Тест
 common.title-enter-password=Ввод пароля
+common.triggers=Триггеры
 common.value=Значение
 common.yes.button=Да
 # -------------------------------------------------------------
@@ -679,6 +680,7 @@ BrowserTableEditingPanel.quering=Выполнение запроса
 BrowserTableEditingPanel.row-count=Количество строк с данными:
 BrowserTableEditingPanel.table-columns=Поля таблицы
 BrowserTableEditingPanel.table-indexes=Табличные индексы
+BrowserTableEditingPanel.table-triggers=Табличные триггеры
 BrowserTableEditingPanel.table-keys=Ключи таблицы
 BrowserTableEditingPanel.table-name=Имя таблицы:
 BrowserTreeFolderPopupMenu.ConnectAll=Подключить все
@@ -1366,6 +1368,11 @@ TableColumnIndexTableModel.Expression=Выражение
 TableColumnIndexTableModel.IndexName=Название Индекса
 TableColumnIndexTableModel.IndexedColumn=Связанный Столбец
 TableColumnIndexTableModel.Unique=Уникальность
+TableTriggersTableModel.TriggerName=Имя триггера
+TableTriggersTableModel.TriggerType=Тип триггера
+TableTriggersTableModel.Active=Активность
+TableTriggersTableModel.Position=Позиция
+TableTriggersTableModel.Description=Описание
 TableConstraintsPanel.DeleteRule=Правило удаления
 TableConstraintsPanel.Name=Имя
 TableConstraintsPanel.ReferenceColumn=Внешний столбец
