Add tablespaces to the guide

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1632,6 +1632,30 @@ SELECT * FROM employees WHERE (surname = ?)
 \anonsubsubsection{Удаление пользователей}
 На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени пользователя и выберите пункт всплывающего меню \textit{Удалить <имя пользователя>:USER}. Откроется  диалоговое окно для подтверждения или отката операции удаления пользователя (см. \hyperref[ris:01]{рис.~\ref{ris:01}}). Для подтверждения операции нажмите кнопку «Подтвердить».
 
+\anonsubsection{ТАБЛИЧНЫЕ ПРОСТРАНСТВА}
+
+\anonsubsubsection{Создание табличного пространства}
+
+Диалоговое окно \textit{Create tablespace} позволяет создавать новые табличные пространства в выбранном соединении с базой данных.
+
+\begin{enumerate}[leftmargin=26pt]
+	\item На панели \textit{Подключения} щелкните правой кнопкой мыши по объекту ТАБЛИЧНЫЕ ПРОСТРАНСТВА и выберите пункт \textit{Создать табличное пространство} всплывающего меню. Откроется диалоговое окно.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.6\linewidth]{img/create_tablespace.png}
+	\end{figure}
+	\item Введите запрашиваемые данные в данном окне.
+	\item Нажмите кнопку \textit{OK}. Появится новое диалоговое окно для подтверждения или отката операции создания роли (см. \hyperref[ris:01]{рис.~\ref{ris:01}}).
+	\item Проверьте сгенерированный SQL код.
+	\item Сделайте \ttt{commit} или \ttt{rollback} транзакции, нажав на соответствующие кнопки.
+\end{enumerate}
+
+\anonsubsubsection{Изменение табличных пространств}
+На боковой панели \textit{Подключения} кликните 2 раза мышкой по нужному табличному пространству. откроется вкладка редактирования табличного пространства. Для добавления таблиц и индексов в табличное пространство перетащите их из дерева объектов. 
+
+\anonsubsubsection{Удаление табличных пространств}
+На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени табличного пространства и выберите пункт всплывающего меню \textit{Удалить <имя табличного пространства>}. Откроется  диалоговое окно для подтверждения или отката операции удаления пространства (см. \hyperref[ris:01]{рис.~\ref{ris:01}}). Для подтверждения операции нажмите кнопку «Подтвердить».
+
 \newpage
 \section{Выполнение хранимых объектов}\label{sec:execute_proc}
 
