translate dialog with parameters

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -50,6 +50,7 @@ common.generate.button=Generate
 common.get-rows-count=Get rows count
 common.help.button=Help
 common.indexes=Indices
+common.input-parameters=Input parameters
 common.key=Key
 common.message.apply-changes=Do you wish to apply your changes?
 common.message-enter-password=Your user name and password are not defined.\nPlease enter your user name and password.
