--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -50,6 +50,7 @@ common.generate.button=Генерировать
 common.get-rows-count=Получить кол-во записей
 common.help.button=Справка
 common.indexes=Индексы
+common.input-parameters=Входные параметры
 common.key=Ключ
 common.message.apply-changes=Вы хотите применить изменения?
 common.message-enter-password=Ваши имя пользователя и пароль не определены.\nПожалуйста, введите ваше имя пользователя и пароль.
