"About" panel was translated into russian language.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -514,6 +514,15 @@ preferences.restart-message=The settings will take effect after the application 
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
+AboutPanel.Title=About
+AboutPanel.Copyright=Copyright
+AboutPanel.System=System
+AboutPanel.Resources=Resources
+AboutPanel.License=License
+AboutPanel.Version=Version
+AboutPanel.Fork_of_execute_query=Fork of Execute Query
+AboutPanel.Error_loading_license_panel_text=Error loading license panel text
+AboutPanel.ViewLicense=View License
 AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Active
 AbstractCreateObjectPanel.check=Check
@@ -1158,6 +1167,12 @@ GrantManagerPanel.Views=Views
 GrantManagerPanel.connection.close=Connection Close!
 GrantManagerPanel.message.notConnected=No connections available!
 GrantManagerPanel.message.terminate-grant=Are you sure that you want to terminate process?
+HeapMemoryPanel.Measures-the-size-of=Measures the size of the
+HeapMemoryPanel.object-heap=Java Virtual Machine's object heap.
+HeapMemoryPanel.RunGarbageCollector=Run Garbage Collector
+HeapMemoryPanel.Garbage-collection-released=Garbage collection released 
+HeapMemoryPanel.Kb-used= Kb used,  
+HeapMemoryPanel.Kb-total= Kb total
 HistoryCommand.historyEmptyMessage=No SQL command history available
 HostPanel.DataTypes=Data Types
 HostPanel.DatabaseConnection=Database Connection
