--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -513,6 +513,15 @@ preferences.restart-message=Настройки вступят в силу пос
 # -----------------------------------------------------
 # Classes
 # -----------------------------------------------------
+AboutPanel.Title=О программе
+AboutPanel.Copyright=Авторские права
+AboutPanel.System=Система
+AboutPanel.Resources=Используемые ресурсы
+AboutPanel.License=Лицензия
+AboutPanel.Version=Версия
+AboutPanel.Fork_of_execute_query=Ветка выполняемого запроса
+AboutPanel.Error_loading_license_panel_text=Ошибка загрузки панели текста лицензии
+AboutPanel.ViewLicense=Просмотреть Лицензию
 AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Активный
 AbstractCreateObjectPanel.check=Проверка
@@ -1158,6 +1167,12 @@ GrantManagerPanel.Views=Представления
 GrantManagerPanel.connection.close=Соединение прервано!
 GrantManagerPanel.message.notConnected=Нет доступных подключений!
 GrantManagerPanel.message.terminate-grant=Вы уверены, что хотите прервать процесс назначения привилегий?
+HeapMemoryPanel.Measures-the-size-of=Измерение используемой виртуальной машиной
+HeapMemoryPanel.object-heap=Java памяти в реальном времени.
+HeapMemoryPanel.RunGarbageCollector=Запустить сборщик мусора
+HeapMemoryPanel.Garbage-collection-released=Сборка мусора завершена, очищено 
+HeapMemoryPanel.Kb-used= Kb используется,  
+HeapMemoryPanel.Kb-total= Kb всего
 HistoryCommand.historyEmptyMessage=В истории нет доступных SQL команд
 HostPanel.DataTypes=Типы Данных
 HostPanel.DatabaseConnection=Подключение к базе данных
