--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -202,7 +202,7 @@ action.preferences-command=Preferences
 action.print-command=Print
 action.print-explained-plan-command=Print Explained Plan
 action.print-plan-command=Print Plan
-action.print-preview-command=Print Preview
+action.print-preview-command=Print Preview123
 action.redo-command.description=Redo the last action
 action.redo-command=Redo
 action.release-notes-command.description=RedExpert version release notes
@@ -893,7 +893,7 @@ ConnectionPanel.userField=User Name:
 ConnectionPanel.warning.DataSourceException.level-change=The selected isolation level could not be applied.\nThe JDBC driver returned:\n\n
 ConnectionPanel.warning.level-change=The specified driver for this connection does not support transactions.\nThis feature is unavailable.
 ConnectionPanel.warning.useNewAPI=New API is available with Jaybird 4 driver only and newer.
-ConnectionProgressDialog.connectionLabel=Establishing connection to {0}
+ConnectionProgressDialog.connectionLabel=Establishing connection to 
 ConnectionsListPanel.AvailableConnections=Available Connections
 ConnectionsListPanel.ConnectionName=Connection Name
 ConnectionsListPanel.DataSource=Data Source
@@ -1515,3 +1515,60 @@ WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.properties=properties
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
+
+
+preferences.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
+common.Copyright=Copyright
+common.System=System
+common.Resources=Resources
+common.License=License
+preferences.HeapMemoryPanel.RunGarbageCollector=Run Garbage Collector
+preferences.HeapMemoryPanel.MeasuresTheSize=Measures the size of the
+preferences.HeapMemoryPanel.JavaVirtualMachines=Java Virtual Machine's object heap.
+preferences.HeapMemoryPanel.GarbageCollection=Garbage collection released 
+preferences.HeapMemoryPanel.used=used
+preferences.HeapMemoryPanel.total=total
+action.FindAndReplace=Find and Replace
+action.WholeWordsCheck=Whole words only
+action.MatchCaseCheck=Match case
+action.WrapCheck=Wrap Search
+action.Replace=Replace
+action.RegularExpressions=Regular expressions
+action.SearchUp=Search Up
+action.SearchDown=Search Down
+action.ReplaceAll=Replace All
+action.FindText=Find Text
+message.FindReplaceDialog=The replacement text must be different to the find text.
+message.SearchFilesDialog.NotSelectedPath=You must select a search path
+message.SearchFilesDialog.ThePathNotExist=The path or file entered does not exist
+action.FileTypes=File Types
+action.SearchPath=Search Path
+message.SearchSubdirectories=Search Subdirectories
+message.EnterSearchText=You must enter search text
+message.EnterReplaceText=You must enter replacement text
+action.console-UsingJavaVersion=Using Java version 
+action.console-JavaVersion=Java version
+action.console-RedExpertVersion=Red Expert version
+action.console-OSVersion=Operating System
+action.console-SystemReady=System is ready.
+action.console-CannotCheckForUpdates=Cannot check for updates
+action.console-CheckingForNewVersion=Checking for new version update from
+action.console-RedExpertUpToDate=Red Expert is up to date.
+action.console-ErrorCheckingForUpdate=Error checking for update
+action.console-DownloadUpdate=Download update
+action.console-ApplicationNeedsUpdate=The application needs to be updated
+common.Version=version
+ClearRecentFilesCommand=An IO error occurred clearing the recent open files list
+action.console-JavaHeapSize=Java heap size
+menu.file-text=Text files
+menu.file-sql=SQL files
+menu.file-RedExpertERD=Red Expert ERD
+action.new-command.open-query-editor=Open Query Editor Window
+action.new-command.new-query-editor=New Query Editor Window
+action.new-command.new-scratch-pad=New Scratch Pad Window
+action.new-command.new-erd=New ERD Window
+action.new-command.open-with=Open With
+action.new-command.overwrite-file=Overwrite existing file?
+common.error.selection-object=Error during database object selection
+GrantManagerPanel.connection-canceled=Connection cancelled
+common.table.invalid-name=Invalid table name
