--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1515,3 +1515,60 @@ WindowAddUser.error.pwds-not-match=Пароли не совпадают
 WindowAddUser.properties=Свойства
 WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
+
+
+preferences.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
+common.Copyright=Авторское право
+common.System=Система
+common.Resources=Источники
+common.License=Лицензия
+preferences.HeapMemoryPanel.RunGarbageCollector=Запуск Сборщик Мусора
+preferences.HeapMemoryPanel.MeasuresTheSize=Измеряет размер кучи
+preferences.HeapMemoryPanel.JavaVirtualMachines=объектов виртуальной машины Java.
+preferences.HeapMemoryPanel.GarbageCollection=Сборщик мусора освободил 
+preferences.HeapMemoryPanel.used=использовано
+preferences.HeapMemoryPanel.total=всего
+action.FindAndReplace=Найти и Заменить
+action.WholeWordsCheck=Только целые слова
+action.MatchCaseCheck=Учитывать регистр
+action.WrapCheck=Завершить поиск
+action.Replace=Заменить
+action.RegularExpressions=Регулярные выражения
+action.SearchUp=Поиск Вверх
+action.SearchDown=Поиск Вниз
+action.ReplaceAll=Замените Все
+action.FindText=Поиск текста
+message.FindReplaceDialog=Текст замены должен отличаться от текста поиска.
+message.SearchFilesDialog.NotSelectedPath=Вы должны указать путь
+message.SearchFilesDialog.ThePathNotExist=Введенный путь или файл не существует
+action.FileTypes=Тип файла:
+action.SearchPath=Путь поиска:
+message.SearchSubdirectories=Поиск в подкаталогах
+message.EnterSearchText=Вы должны ввести текст для поиска
+message.EnterReplaceText=Вы должны ввести текст замены
+action.console-UsingJavaVersion=Использование версии Java 
+action.console-JavaVersion=Версия Java
+action.console-RedExpertVersion=Версия Red Expert
+action.console-OSVersion=Операционная система
+action.console-SystemReady=Система готова.
+action.console-CannotCheckForUpdates=Не удается проверить наличие обновлений
+action.console-CheckingForNewVersion=Проверка наличия обновления новой версии с 
+action.console-RedExpertUpToDate=Red Expert обновлен.
+action.console-ErrorCheckingForUpdate=Проверка ошибок при обновлении
+action.console-DownloadUpdate=Загрузить обновление
+action.console-ApplicationNeedsUpdate=Приложение необходимо обновить
+common.Version=версия
+ClearRecentFilesCommand=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
+action.console-JavaHeapSize=Размер кучи Java
+menu.file-text=Текстовые файлы
+menu.file-sql=SQL-файлы
+menu.file-RedExpertERD=Red Expert ERD
+action.new-command.open-query-editor=Открыть окно Редактора запросов
+action.new-command.new-query-editor=Новое окно Редактора запросов
+action.new-command.new-scratch-pad=Новое окно Блокнота
+action.new-command.new-erd=Новое окно ERD
+action.new-command.open-with=Открыть С
+action.new-command.overwrite-file=Перезаписать существующий файл?
+common.error.selection-object=Ошибка при выборе объекта базы данных
+GrantManagerPanel.connection-canceled=Соединение отменено
+common.table.invalid-name=Недопустимое имя таблицы
