Перевод предварительного просмотра

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1515,3 +1515,18 @@ WindowAddUser.error.pwds-not-match=Passwords do not match
 WindowAddUser.properties=properties
 WindowAddUser.tag=Tag
 WindowAddUser.value=Value
+
+
+
+
+Print_Preview=Print preview
+PRINT_TITLE=Print
+Select_the_print_area=Select the print area
+SQL_Query_Text_Area=SQL Query Text Area
+SQL_Table_Results_Panel=SQL Table Results Panel
+Preview=Preview
+Print=Print
+No_SQL_table_results=No SQL table results.
+
+
+Page_Setup=Page Setup
