--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1515,3 +1515,18 @@ WindowAddUser.error.pwds-not-match=Пароли не совпадают
 WindowAddUser.properties=Свойства
 WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
+
+
+
+
+Print_Preview=Предварительный просмотр
+PRINT_TITLE=Печать
+Select_the_print_area=Выберите область печати
+SQL_Query_Text_Area=SQL-запрос текстовой области
+SQL_Table_Results_Panel=SQL таблица
+Preview=Показать
+Print=Печать
+No_SQL_table_results=SQL таблица не найдена.
+
+
+Page_Setup=Настройка страницы
