--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1517,58 +1517,58 @@ WindowAddUser.tag=Tag
 WindowAddUser.value=Value
 
 
-preferences.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
-common.Copyright=Copyright
-common.System=System
-common.Resources=Resources
-common.License=License
-preferences.HeapMemoryPanel.RunGarbageCollector=Run Garbage Collector
-preferences.HeapMemoryPanel.MeasuresTheSize=Measures the size of the
-preferences.HeapMemoryPanel.JavaVirtualMachines=Java Virtual Machine's object heap.
-preferences.HeapMemoryPanel.GarbageCollection=Garbage collection released 
-preferences.HeapMemoryPanel.used=used
-preferences.HeapMemoryPanel.total=total
-action.FindAndReplace=Find and Replace
-action.WholeWordsCheck=Whole words only
-action.MatchCaseCheck=Match case
-action.WrapCheck=Wrap Search
-action.Replace=Replace
-action.RegularExpressions=Regular expressions
-action.SearchUp=Search Up
-action.SearchDown=Search Down
-action.ReplaceAll=Replace All
-action.FindText=Find Text
+PropertiesAppearance.ChangingTheme.Information=Changing the look and feel may also change the colours applied to syntax\nhighlighting and the results set table views to better suit the selected look
+AboutPanel.Copyright=Copyright
+AboutPanel.System=System
+AboutPanel.Resources=Resources
+AboutPanel.License=License
+HeapMemoryPanel.RunGarbageCollector=Run Garbage Collector
+HeapMemoryPanel.MeasuresTheSize=Measures the size of the
+HeapMemoryPanel.JavaVirtualMachines=Java Virtual Machine's object heap.
+HeapMemoryPanel.GarbageCollection=Garbage collection released 
+HeapMemoryPanel.used=used
+HeapMemoryPanel.total=total
+FindReplaceDialog.FindAndReplace=Find and Replace
+FindReplaceDialog.WholeWordsCheck=Whole words only
+FindReplaceDialog.MatchCaseCheck=Match case
+FindReplaceDialog.WrapCheck=Wrap Search
+FindReplaceDialog.Replace=Replace
+FindReplaceDialog.RegularExpressions=Regular expressions
+FindReplaceDialog.SearchUp=Search Up
+FindReplaceDialog.SearchDown=Search Down
+FindReplaceDialog.ReplaceAll=Replace All
+FindReplaceDialog.FindText=Find Text
 message.FindReplaceDialog=The replacement text must be different to the find text.
 message.SearchFilesDialog.NotSelectedPath=You must select a search path
 message.SearchFilesDialog.ThePathNotExist=The path or file entered does not exist
-action.FileTypes=File Types
-action.SearchPath=Search Path
+SearchFilesDialog.FileTypes=File Types
+SearchFilesDialog.SearchPath=Search Path
 message.SearchSubdirectories=Search Subdirectories
 message.EnterSearchText=You must enter search text
 message.EnterReplaceText=You must enter replacement text
-action.console-UsingJavaVersion=Using Java version 
-action.console-JavaVersion=Java version
-action.console-RedExpertVersion=Red Expert version
-action.console-OSVersion=Operating System
-action.console-SystemReady=System is ready.
-action.console-CannotCheckForUpdates=Cannot check for updates
-action.console-CheckingForNewVersion=Checking for new version update from
-action.console-RedExpertUpToDate=Red Expert is up to date.
-action.console-ErrorCheckingForUpdate=Error checking for update
-action.console-DownloadUpdate=Download update
-action.console-ApplicationNeedsUpdate=The application needs to be updated
-common.Version=version
-ClearRecentFilesCommand=An IO error occurred clearing the recent open files list
-action.console-JavaHeapSize=Java heap size
-menu.file-text=Text files
-menu.file-sql=SQL files
-menu.file-RedExpertERD=Red Expert ERD
-action.new-command.open-query-editor=Open Query Editor Window
-action.new-command.new-query-editor=New Query Editor Window
-action.new-command.new-scratch-pad=New Scratch Pad Window
-action.new-command.new-erd=New ERD Window
-action.new-command.open-with=Open With
-action.new-command.overwrite-file=Overwrite existing file?
-common.error.selection-object=Error during database object selection
-GrantManagerPanel.connection-canceled=Connection cancelled
-common.table.invalid-name=Invalid table name
+ApplicationLauncher.console-UsingJavaVersion=Using Java version 
+ApplicationLauncher.console-JavaVersion=Java version
+ApplicationLauncher.console-RedExpertVersion=Red Expert version
+ApplicationLauncher.console-OSVersion=Operating System
+ApplicationLauncher.console-SystemReady=System is ready.
+CheckForUpdateNotifier.console-CannotCheckForUpdates=Cannot check for updates
+CheckForUpdateNotifier.console-CheckingForNewVersion=Checking for new version update from
+CheckForUpdateNotifier.console-RedExpertUpToDate=Red Expert is up to date.
+CheckForUpdateNotifier.console-ErrorCheckingForUpdate=Error checking for update
+CheckForUpdateNotifier.console-DownloadUpdate=Download update
+CheckForUpdateNotifier.console-ApplicationNeedsUpdate=The application needs to be updated
+CheckForUpdateNotifier.Version=version
+ClearRecentFilesCommand.message=An IO error occurred clearing the recent open files list
+HeapMemoryStatusSnippet.console-JavaHeapSize=Java heap size
+OpenFileDialog.file-text=Text files
+OpenFileDialog.file-sql=SQL files
+OpenFileDialog.file-RedExpertERD=Red Expert ERD
+OpenFileDialog.new-command.open-query-editor=Open Query Editor Window
+OpenFileDialog.new-command.new-query-editor=New Query Editor Window
+OpenFileDialog.new-command.new-scratch-pad=New Scratch Pad Window
+OpenFileDialog.new-command.new-erd=New ERD Window
+OpenFileDialog.new-command.open-with=Open With
+FileChooserDialog.new-command.overwrite-file=Overwrite existing file?
+TableSelectionCombosGroup.error.selection-object=Error during database object selection
+ConnectionProgressDialog.connection-canceled=Connection cancelled
+DefaultStatementExecutor.table.invalid-name=Invalid table name
