--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1517,58 +1517,58 @@ WindowAddUser.tag=Метка
 WindowAddUser.value=Значение
 
 
-preferences.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
-common.Copyright=Авторское право
-common.System=Система
-common.Resources=Источники
-common.License=Лицензия
-preferences.HeapMemoryPanel.RunGarbageCollector=Запуск Сборщик Мусора
-preferences.HeapMemoryPanel.MeasuresTheSize=Измеряет размер кучи
-preferences.HeapMemoryPanel.JavaVirtualMachines=объектов виртуальной машины Java.
-preferences.HeapMemoryPanel.GarbageCollection=Сборщик мусора освободил 
-preferences.HeapMemoryPanel.used=использовано
-preferences.HeapMemoryPanel.total=всего
-action.FindAndReplace=Найти и Заменить
-action.WholeWordsCheck=Только целые слова
-action.MatchCaseCheck=Учитывать регистр
-action.WrapCheck=Завершить поиск
-action.Replace=Заменить
-action.RegularExpressions=Регулярные выражения
-action.SearchUp=Поиск Вверх
-action.SearchDown=Поиск Вниз
-action.ReplaceAll=Замените Все
-action.FindText=Поиск текста
+PropertiesAppearance.ChangingTheme.Information=Изменение внешнего вида может также изменить цвета, применяемые к подсветке синтаксиса\nи результаты заданных таблиц представлены так, чтобы они лучше соответствовали выбранному виду
+AboutPanel.Copyright=Авторское право
+AboutPanel.System=Система
+AboutPanel.Resources=Источники
+AboutPanel.License=Лицензия
+HeapMemoryPanel.RunGarbageCollector=Запуск Сборщик Мусора
+HeapMemoryPanel.MeasuresTheSize=Измеряет размер кучи
+HeapMemoryPanel.JavaVirtualMachines=объектов виртуальной машины Java.
+HeapMemoryPanel.GarbageCollection=Сборщик мусора освободил 
+HeapMemoryPanel.used=использовано
+HeapMemoryPanel.total=всего
+FindReplaceDialog.FindAndReplace=Найти и Заменить
+FindReplaceDialog.WholeWordsCheck=Только целые слова
+FindReplaceDialog.MatchCaseCheck=Учитывать регистр
+FindReplaceDialog.WrapCheck=Завершить поиск
+FindReplaceDialog.Replace=Заменить
+FindReplaceDialog.RegularExpressions=Регулярные выражения
+FindReplaceDialog.SearchUp=Поиск Вверх
+FindReplaceDialog.SearchDown=Поиск Вниз
+FindReplaceDialog.ReplaceAll=Замените Все
+FindReplaceDialog.FindText=Поиск текста
 message.FindReplaceDialog=Текст замены должен отличаться от текста поиска.
 message.SearchFilesDialog.NotSelectedPath=Вы должны указать путь
 message.SearchFilesDialog.ThePathNotExist=Введенный путь или файл не существует
-action.FileTypes=Тип файла:
-action.SearchPath=Путь поиска:
+SearchFilesDialog.FileTypes=Тип файла:
+SearchFilesDialog.SearchPath=Путь поиска:
 message.SearchSubdirectories=Поиск в подкаталогах
 message.EnterSearchText=Вы должны ввести текст для поиска
 message.EnterReplaceText=Вы должны ввести текст замены
-action.console-UsingJavaVersion=Использование версии Java 
-action.console-JavaVersion=Версия Java
-action.console-RedExpertVersion=Версия Red Expert
-action.console-OSVersion=Операционная система
-action.console-SystemReady=Система готова.
-action.console-CannotCheckForUpdates=Не удается проверить наличие обновлений
-action.console-CheckingForNewVersion=Проверка наличия обновления новой версии с 
-action.console-RedExpertUpToDate=Red Expert обновлен.
-action.console-ErrorCheckingForUpdate=Проверка ошибок при обновлении
-action.console-DownloadUpdate=Загрузить обновление
-action.console-ApplicationNeedsUpdate=Приложение необходимо обновить
-common.Version=версия
-ClearRecentFilesCommand=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
-action.console-JavaHeapSize=Размер кучи Java
-menu.file-text=Текстовые файлы
-menu.file-sql=SQL-файлы
-menu.file-RedExpertERD=Red Expert ERD
-action.new-command.open-query-editor=Открыть окно Редактора запросов
-action.new-command.new-query-editor=Новое окно Редактора запросов
-action.new-command.new-scratch-pad=Новое окно Блокнота
-action.new-command.new-erd=Новое окно ERD
-action.new-command.open-with=Открыть С
-action.new-command.overwrite-file=Перезаписать существующий файл?
-common.error.selection-object=Ошибка при выборе объекта базы данных
-GrantManagerPanel.connection-canceled=Соединение отменено
-common.table.invalid-name=Недопустимое имя таблицы
+ApplicationLauncher.console-UsingJavaVersion=Использование версии Java 
+ApplicationLauncher.console-JavaVersion=Версия Java
+ApplicationLauncher.console-RedExpertVersion=Версия Red Expert
+ApplicationLauncher.console-OSVersion=Операционная система
+ApplicationLauncher.console-SystemReady=Система готова.
+CheckForUpdateNotifier.console-CannotCheckForUpdates=Не удается проверить наличие обновлений
+CheckForUpdateNotifier.console-CheckingForNewVersion=Проверка наличия обновления новой версии с 
+CheckForUpdateNotifier.console-RedExpertUpToDate=Red Expert обновлен.
+CheckForUpdateNotifier.console-ErrorCheckingForUpdate=Проверка ошибок при обновлении
+CheckForUpdateNotifier.console-DownloadUpdate=Загрузить обновление
+CheckForUpdateNotifier.console-ApplicationNeedsUpdate=Приложение необходимо обновить
+CheckForUpdateNotifier.Version=версия
+ClearRecentFilesCommand.message=Произошла ошибка ввода-вывода при очистке списка последних открытых файлов
+HeapMemoryStatusSnippet.console-JavaHeapSize=Размер кучи Java
+OpenFileDialog.file-text=Текстовые файлы
+OpenFileDialog.file-sql=SQL-файлы
+OpenFileDialog.file-RedExpertERD=Red Expert ERD
+OpenFileDialog.new-command.open-query-editor=Открыть окно Редактора запросов
+OpenFileDialog.new-command.new-query-editor=Новое окно Редактора запросов
+OpenFileDialog.new-command.new-scratch-pad=Новое окно Блокнота
+OpenFileDialog.new-command.new-erd=Новое окно ERD
+OpenFileDialog.new-command.open-with=Открыть С
+FileChooserDialog.new-command.overwrite-file=Перезаписать существующий файл?
+TableSelectionCombosGroup.error.selection-object=Ошибка при выборе объекта базы данных
+ConnectionProgressDialog.connection-canceled=Соединение отменено
+DefaultStatementExecutor.table.invalid-name=Недопустимое имя таблицы
